2005-06-01  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: adjust to FileIconLoader
	change

2005-05-30  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/CommandToolButton.cs: Only update button properties if
	they have really changed.
	* Commands/CommandManager.cs: Report errors using a new CommandError
	event.
	* Commands/CommandErrorHandler.cs: New delegate and event args for the
	CommandError event.

2005-05-15  Lluis Sanchez Gual  <lluis@novell.com>

	* FileBrowser/FileBrowser.cs: Catch UnauthorizedAccessException errors.
	* IconView/IconView.cs: Add a shadow to the icon view.
	* TabLabel/TabLabel.cs: Added IntPtr constructor to make gtk# happy.

2005-05-08  John Luke  <john.luke@gmail.com>

	* Tree/TreeView.cs: use DefaultSortFunc property instead
	* DataGrid/DataGrid.cs: use ColumnTypes property instead
	
2005-05-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/CommandManager.cs: Catch and report exceptions thrown
	while dispatching commands.

2005-05-04  Alp Toker  <alp@atoker.com>

	* Commands/CommandToolButton.cs: enable UseUnderline. The Gtk+ docs
	say "Labels shown on tool buttons never have mnemonics on them" so
	this effectively just hides the underscore.

2005-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/CommandInfo.cs: Forgot to copy the description from the
	command.

2005-04-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Command/*: New command infrastructure.
	* Makefile.am: Added new command files.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-16  John Luke  <john.luke@gmail.com>

	* Tree/TreeView.cs:
	* FileBrowser/FileBrowser.cs:
	* TabLabel/TabLabel.cs: fix warnings mostly about obselete
	Gtk# API

2005-03-15  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: make enum internal
	so it will compile with latest mcs

2005-01-31  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: use ToolItem
	instead of action crapola
