@@ -1,13 +1,12 @@
 
 DLL = $(top_builddir)/build/bin/MonoDevelop.Gui.Widgets.dll
 
-REFERENCES = /r:System.Drawing \
-	/r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
-	/r:$(top_builddir)/build/bin/MonoDevelop.Gui.Utils.dll \
+REFERENCES = -r:System.Drawing.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Gui.Utils.dll \
 	$(GTK_SHARP_LIBS) \
 	$(GLADE_SHARP_LIBS) \
-	$(GNOME_SHARP_LIBS) \
-	$(GNOME_VFS_SHARP_LIBS)
+	$(GNOME_SHARP_LIBS)
 
 FILES = \
 Tree/TreeView.cs \
